--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ article p {
   max-width: 100%;
 }
 
-.join {
+section.join {
   background: #f4f4f4;
   text-align: center;
   padding: 60px 20px;
@@ -128,4 +128,40 @@ footer {
   padding: 10px;
   text-align: center;
   white-space: nowrap;
+}
+
+/* pseudo classes */
+
+nav li a:hover {
+  text-decoration: underline;
+}
+
+.images li:hover {
+  position: relative;
+  top: -4px;
+}
+
+form input:focus {
+  border: 4px dashed #4b4b4b;
+}
+
+form input:valid {
+  border: 4px solid #71d300;
+}
+
+article p::first-line {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+section.join p::first-letter {
+  font-size: 1.5em;
+}
+
+p::selection {
+  background-color: #f63232;
+}
+
+p::after {
+  content: "...";
 }
