--- a/styles.css
+++ b/styles.css
@@ -165,3 +165,62 @@ p::selection {
 p::after {
   content: "...";
 }
+
+/* Responsive styles */
+
+@media screen and (max-width: 1400px) {
+  .banner .welcome h2 {
+    font-size: 60px;
+  }
+  nav li {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .banner .welcome h2 {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .banner .welcome {
+    position: relative;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .banner .welcome br {
+    display: none;
+  }
+
+  .banner .welcome h2 {
+    font-size: 25px;
+  }
+
+  .banner .welcome span {
+    font-size: 1em;
+  }
+  .images li {
+    width: 100%;
+    margin: 20px auto;
+    display: block;
+    max-width: none;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  header {
+    position: relative;
+  }
+
+  nav {
+    top: 0;
+  }
+  nav li {
+    font-size: 20px;
+    display: block;
+    width: 100%;
+    margin: 12px 0;
+  }
+}
